@@ -1,10 +1,11 @@
-Immediate
-(*) Disable trace/warning output during destructors on Visual C++
-(*) Add -lwsock32 to tools/Makefile.am if needed (MingW!)
-(*) Rename libcompiler.h/compiler.h to reduce confusion
-
 All Over
 (*) Ensure table/column/cursor/... names are always quoted
+
+Build & Configuration
+(*) Add -lwsock32 to tools/Makefile.am if needed (MingW!)
+(*) Rename libcompiler.h/compiler.h to reduce confusion
+(*) Remove ../include/pqxx from libtool include path
+(*) Separate out generic build problems from "missing libpq" configure error
 
 Connections
 (*) Clean up connection state model
